--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -1,9 +1,10 @@
 .play-video {
-    flex-basis:  65%;
+    flex-basis:  69%;
 }
 
-.play-video video {
+.play-video iframe {
     width: 100%;
+    height: 37vw;
 }
 .play-video h3 {
     margin-top: 10px;
@@ -105,6 +106,8 @@
     width: 35px;
     border-radius: 50%;
     margin-right: 15px;
+    object-fit: cover;
+    display: block;
 }
 
 .comment h3 {
@@ -135,4 +138,22 @@
 .comment-action span {
     margin-right: 20px;
     color: #5a5a5a;
+}
+
+@media (max-width: 900px) {
+    .play-video {
+        flex-basis: 100%;
+    }
+    .play-video iframe {
+        width: 100%;
+        height: 50vh
+    }
+    .vid-description {
+        padding-left: 0;
+    }
+    .play-video .play-video-info span {
+        margin-left: 0;
+        margin-right: 15px;
+        margin-bottom: 5px;
+    }
 }
