--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -22,6 +22,11 @@
     margin-bottom: 5px;
 }
 
+.vid-info p {
+    font-size: 13px;
+    margin-bottom: 5px;
+}
+
 @media (max-width: 900px) {
     .recommended {
         flex-basis: 100%;
