--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -1,34 +1,36 @@
-.recommended {
+.recommended{
     flex-basis: 30%;
 }
-
-.side-video-list {
+.side-video-list{
     display: flex;
     justify-content: space-between;
     margin-bottom: 8px;
 }
-
-.side-video-list img {
-    flex-basis: 49%;
-    width: 50%;
+.side-video-list img{
+    width: 100%;
 }
-
-.vid-info {
+.side-video-list .small-thumbnail{
     flex-basis: 49%;
 }
-
-.vid-info h4 {
+.side-video-list .vid-info{
+    flex-basis: 49%;
+}
+.side-video-list .vid-info h4{
     font-size: 13px;
     margin-bottom: 5px;
 }
-
-.vid-info p {
-    font-size: 13px;
-    margin-bottom: 5px;
+.recommended p{
+    font-size: 14px;
+    font-weight: 500;
+}
+.recommended .recommended-views{
+    font-size: 12px;
+    font-weight: 400;
 }
 
-@media (max-width: 900px) {
-    .recommended {
+@media (max-width: 900px){
+    .recommended{
         flex-basis: 100%;
     }
+   
 }
