--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -18,7 +18,6 @@
     align-items: center;
     margin-bottom: 20px;
     width: fit-content;
-    flex-wrap: wrap;
     cursor: pointer;
 }
 
@@ -61,6 +60,16 @@
 .side-link.active img {
     padding-bottom: 2px;
     border-bottom: 3px solid red;
+}
+
+@media (max-width: 1100px) {
+    .side-link p {
+        font-size: 12px;
+    }
+    .subscribed-list.side-link p {
+        flex-wrap: nowrap;
+    }
+
 }
 
 @media (max-width: 900px) {
