--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -22,6 +22,7 @@ nav {
     margin-right: 15px;
     padding: 8px 12px;
     border-radius: 25px;
+    cursor: not-allowed;
 }
 
 .nav-middle .search-box input {
@@ -29,10 +30,12 @@ nav {
     border: 0;
     outline: 0;
     background: transparent;
+    cursor: not-allowed;
 }
 
 .nav-middle .search-box img {
     width: 15px;
+    cursor: not-allowed;
 }
 
 .nav-right img {
